Bug 66048 - l10ntools: parser is confused by leading \\\"
Summary: l10ntools: parser is confused by leading \\\"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0 target:4.1.0.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-06-22 15:10 UTC by Andras Timar
Modified: 2013-06-22 20:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2013-06-22 15:10:09 UTC
See this buildfix:
https://gerrit.libreoffice.org/gitweb?p=translations.git;a=commitdiff;h=46c683c740acf324164f188a97abea28fe3c1bf9;hp=5177014ee256887eb36b358747038816bad3371d

The translation was wrong, it is out of question. But \\\" was not handled correctly by l10ntools, and it caused a build break.

Text[ kk ] = \\\"$file$\\\" есептемесі Oracle Report Builder мүмкіндігін талап етеді.";
              ^
f640: "/home/timar/libreoffice-master/workdir/unxlngx6.pro/SrsPartMergeTarget/dbaccess/source/ui/misc/dbumiscres.src", line 139: Error: syntax error
f256: Error: !! 1 Error found!!

Tamas, can you please look at the issue, build should never fail on wrong translation input. It is a regression. Thanks!
Comment 1 Commit Notification 2013-06-22 17:14:40 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b55289659a5f23af560acc9f46d831038db80fca

fdo#66048: export cannot handle starting \\\"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Tamás Zolnai 2013-06-22 17:24:20 UTC
Hi, Andras

The problem was with the starting ///". As I see it is not a real regression, at least the removed code is from the distance past. Thanks to the current changes in l10ntools we can just throw out this code (before it was used by PrepareTextToMerge() function).
Comment 3 Commit Notification 2013-06-22 20:49:36 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f60520f7b887dcaa4663fb408660e87e6881352a&h=libreoffice-4-1

fdo#66048: export cannot handle starting \\\"


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.