fdo#66048: export cannot handle starting \\\"

Old stuff. By now we always have to add double
quotes to the edges of text.

Change-Id: I14ca7283d723bf87fb232288d92e53393e90103e